
message IMeshImp {
}
message Mesh {
   optional IMeshImp meshImp = 1;
   repeated float3 vertices = 2;
   repeated uint32 colors = 3;
   repeated float3 normals = 4;
   repeated float2 uvs = 5;
   repeated int32 triangles = 6;
}
message float2 {
   optional float x = 1 [default = 0];
   optional float y = 2 [default = 0];
}
message float3 {
   optional float x = 1 [default = 0];
   optional float y = 2 [default = 0];
   optional float z = 3 [default = 0];
}
